log
Wed Oct 14 19:31:23 UTC 2020: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:25: error: assignment to expression with array type
             aux -> sudo = n -> sudo;
                         ^
sudoku.c:62:13: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
             push_back(lista, aux);
             ^~~~~~~~~
             pushBack
sudoku.c:62:23: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             push_back(lista, aux);
                       ^~~~~
                       list
sudoku.c:62:23: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:31:40 UTC 2020: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:25: error: assignment to expression with array type
             aux -> sudo = n -> sudo;
                         ^
sudoku.c:62:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             pushBack(lista, aux);
                      ^~~~~
                      list
sudoku.c:62:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Wed Oct 14 19:33:09 UTC 2020: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
d449582
Wed Oct 14 19:41:19 UTC 2020: 
 sudoku.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
5e7d784
Wed Oct 14 20:31:45 UTC 2020: 
 sudoku.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 58 insertions(+)
 tests:  0|5
total_score: 0/70
091086e
Wed Oct 14 20:33:30 UTC 2020: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
51de4af
Wed Oct 14 20:35:00 UTC 2020: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
5c08e7d
Wed Oct 14 20:37:46 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
02f8da0
Wed Oct 14 20:37:58 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
62d06d8
Wed Oct 14 20:39:23 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
104d6b4
Wed Oct 14 20:41:11 UTC 2020: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
6876b5c
Wed Oct 14 20:41:35 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
c2400e6
Wed Oct 14 20:41:53 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
ac01b4e
Wed Oct 14 20:42:42 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c17a125
Wed Oct 14 21:40:36 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
e030ea1
Sat Oct 17 00:53:10 UTC 2020: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  3|4
total_score: 20/70
5c104d2
Sat Oct 17 00:53:56 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
8745f19
Sat Oct 17 00:55:08 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
69fb988
Sat Oct 17 02:19:59 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
dd2c81f
Sat Oct 17 02:20:18 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
07652a0
Sat Oct 17 02:21:11 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
1bcc160
Sat Oct 17 02:23:38 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
12c7b8f
Sat Oct 17 02:23:47 UTC 2020: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|3
total_score: 30/70
3d26c21
Sat Oct 17 03:47:03 UTC 2020: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
08a75aa
Sat Oct 17 03:57:13 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ef797d
Sat Oct 17 04:01:45 UTC 2020: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
c66c035
Sat Oct 17 04:04:34 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
12f26fb
Sat Oct 17 04:06:17 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
10d765a
Sat Oct 17 04:17:22 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
249af9f
Sat Oct 17 04:18:06 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
5eea527
Sat Oct 17 04:18:24 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
d42a8b4
Sat Oct 17 04:18:55 UTC 2020: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
39bd35d
Sat Oct 17 04:19:54 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b8db532
Sat Oct 17 04:20:46 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
2bf36f3
Sat Oct 17 04:21:32 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
05dccd7
Sat Oct 17 04:22:02 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
aff7515
Sat Oct 17 04:22:17 UTC 2020: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
761ad33
Sat Oct 17 04:27:22 UTC 2020: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
653d1ec
Sat Oct 17 04:28:59 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
533f6c0
Sat Oct 17 04:37:22 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a982ace
Sat Oct 17 04:37:35 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d753edf
Sat Oct 17 04:37:54 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c4ce31c
